# application-intent-language

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROMPT.md  README.md  nginx.conf  specification.md
.do/: app.yaml
.github/workflows/: pages.yml
cli/: CLI.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  aim.py  pyproject.toml
cli/aim_cli/: __init__.py  __main__.py  cli.py  config.py  menu.py  prompt_builder.py
cli/aim_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pyenv-cli/: README.md
pyenv-cli/pyenv_cli/: persistence.py  tui.py
registry/: README.md  index.json
scripts/: validate_registry.py
site/: brain.md  index.html  specification.md
site/assets/: chrome.js  site.css
site/registry/: index.html  publish.html
site/registry-files/: README.md  index.json
site/spec/: index.html
